// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Cards/CardHorizontal Default 1`] = `
.c8 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: bold;
  border: 0;
  border-radius: 20px;
  cursor: pointer;
  display: inline-block;
  line-height: 1;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  text-transform: uppercase;
  line-height: 1;
  font-size: 14px;
  padding: 8px 26px;
  background-color: transparent;
  color: #6D6E70;
  border: 1px solid #6D6E70;
}

.c8:hover {
  background-color: #6D6E70;
  color: #FFF;
}

.c2 {
  color: #6D6E70;
}

.c2 > svg {
  height: 50px;
  color: inherit;
}

.c6 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: #252525;
}

.c4 {
  text-transform: uppercase;
  margin-top: 0;
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  color: #6D6E70;
  font-size: 30px;
}

.c1 {
  padding: 45px 25px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c5 {
  margin-bottom: 29px;
}

.c3 {
  margin-bottom: 36px;
}

.c7 {
  margin-top: 30px;
}

.c0 {
  width: 100%;
  border-top-right-radius: 40px;
  border-bottom-left-radius: 40px;
  overflow: hidden;
  background-color: #F5F5F5;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: all 0.5s ease-out;
  transition: all 0.5s ease-out;
}

.c0:hover {
  background-color: #FFF;
  box-shadow: 0 0 20px 0 rgba(140,140,140,0.5);
}

<div
  style={
    Object {
      "maxWidth": 300,
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2 c3"
        color="#6D6E70"
      >
        <svg
          color="#6D6E70"
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 0h26.586v48H0z"
              id="a"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <g
              transform="translate(4 1)"
            >
              <path
                d="m19.54 40.955-.8.038c-.024 2.982-2.467 5.408-5.446 5.408-5.755-.014-7.545-7.907-2.329-10.365 3.441-1.761 7.896 1.046 7.775 4.919h.8ZM9.202 12.921c-1.385.976-2.28 2.426-2.732 4.033H1.6v-10h23.385v10h-4.87c-.982-4.2-5.972-6.638-9.833-4.665l-.01.005a6.333 6.333 0 0 0-1.07.627ZM1.6 5.354h23.385V1.6H1.6v3.754Zm12.956 28.68c-1.04-.203-2.117-.123-3.14.126V13.546a5.34 5.34 0 0 1 3.754.001V34.16c-.204-.042-.408-.09-.614-.125Zm2.8 1.167a6.257 6.257 0 0 0-.586-.369V14.486c1.085.846 1.637 2.228 2.01 3.521a.8.8 0 0 0 .76.547h6.245a.8.8 0 0 0 .8-.8V.8a.8.8 0 0 0-.8-.8H.8a.8.8 0 0 0-.8.8v16.954a.8.8 0 0 0 .8.8h6.246a.8.8 0 0 0 .759-.547c.38-1.3.91-2.66 2.01-3.517V34.85C3.564 38.39 6.106 47.965 13.294 48c6.824-.021 9.64-8.866 4.064-12.8Z"
                fill="currentColor"
              />
            </g>
            <path
              d="M46.398 23.11a.799.799 0 0 0-.887.06l-6.13 4.723-1.63-2.115 6.13-4.722c.561-.403.305-1.361-.384-1.427l-5.988-.776a.798.798 0 0 0-.591.16l-5.64 4.345a.8.8 0 0 0-.297.786l.664 3.414-8.327 6.41c-.822.637.142 1.906.977 1.267l8.718-6.71a.8.8 0 0 0 .297-.787l-.664-3.415 4.986-3.842 3.743.486L36.141 25a.8.8 0 0 0-.145 1.122l2.605 3.382c.27.35.772.416 1.122.145l5.234-4.032-.485 3.743-4.985 3.842-3.143-1.517a.799.799 0 0 0-.835.086l-9.21 7.086c-.825.64.145 1.903.976 1.268l8.818-6.784 3.143 1.516a.8.8 0 0 0 .836-.087l5.639-4.346a.797.797 0 0 0 .304-.53l.777-5.987a.799.799 0 0 0-.394-.796Z"
              fill="currentColor"
            />
          </g>
        </svg>
      </div>
      <h5
        className="c4 c5"
      >
        Fast repair
      </h5>
      <span
        className="c6"
      >
        Lorem ipsum dolor sit amet, con sectetadipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
      </span>
      <div
        className="c7"
      >
        <button
          className="c8"
          size="small"
        >
          More...
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Cards/CardHorizontal Hover State 1`] = `
.c8 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: bold;
  border: 0;
  border-radius: 20px;
  cursor: pointer;
  display: inline-block;
  line-height: 1;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  text-transform: uppercase;
  line-height: 1;
  font-size: 14px;
  padding: 8px 26px;
  background-color: transparent;
  color: #6D6E70;
  border: 1px solid #6D6E70;
}

.c8:hover {
  background-color: #6D6E70;
  color: #FFF;
}

.c2 {
  color: #6D6E70;
}

.c2 > svg {
  height: 50px;
  color: inherit;
}

.c6 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: #252525;
}

.c4 {
  text-transform: uppercase;
  margin-top: 0;
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  color: #6D6E70;
  font-size: 30px;
}

.c1 {
  padding: 45px 25px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c5 {
  margin-bottom: 29px;
}

.c3 {
  margin-bottom: 36px;
}

.c7 {
  margin-top: 30px;
}

.c9 {
  -webkit-flex: 0 0 300px;
  -ms-flex: 0 0 300px;
  flex: 0 0 300px;
  overflow: hidden;
}

.c11 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: -webkit-transform 0.5s ease-out;
  -webkit-transition: transform 0.5s ease-out;
  transition: transform 0.5s ease-out;
  width: 100%;
  height: 100%;
}

.c0 {
  width: 100%;
  border-top-right-radius: 40px;
  border-bottom-left-radius: 40px;
  overflow: hidden;
  background-color: #F5F5F5;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: all 0.5s ease-out;
  transition: all 0.5s ease-out;
}

.c0:hover {
  background-color: #FFF;
  box-shadow: 0 0 20px 0 rgba(140,140,140,0.5);
}

.c0:hover .c10 {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

@media (max-width:768px) {
  .c9 {
    display: none;
  }
}

<div
  style={
    Object {
      "maxWidth": 600,
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2 c3"
        color="#6D6E70"
      >
        <svg
          color="#6D6E70"
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 0h22.528v46.582H0z"
              id="a"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <g
              transform="translate(26.472 2)"
            >
              <path
                d="m15.273 19.91-.49.217v24.818H7.69V20.182l-.436-.218C3.818 18.382 1.637 15 1.637 11.236c0-.436.054-.818.109-1.254l6.709 6.709c.436.436 1.09.709 1.746.709.654 0 1.254-.273 1.745-.71l5.018-5.017c.437-.437.71-1.091.71-1.746s-.273-1.255-.71-1.746L10.42 1.636c.273 0 .546-.055.818-.055 5.291 0 9.6 4.31 9.6 9.6a9.628 9.628 0 0 1-5.564 8.728ZM11.237 0c-.873 0-1.8.11-2.727.327L7.09.654l8.673 8.673c.164.164.218.382.218.6 0 .218-.11.437-.218.6l-5.018 5.018c-.327.328-.873.328-1.146 0L.818 6.764.436 8.073C.164 9.109 0 10.146 0 11.183c0 4.2 2.4 8.072 6.109 9.981v25.418h10.364V21.164c3.709-1.91 6.055-5.782 6.055-9.982C22.473 5.02 17.455 0 11.237 0Z"
                fill="currentColor"
              />
            </g>
            <path
              d="M26.473 31.619c0 .981-.109 1.963-.382 2.89l-3.818-.981c.164-.6.273-1.254.273-1.91 0-.49-.055-1.036-.164-1.527l3.873-.763c.109.763.218 1.527.218 2.29ZM19.6 42.255l-1.636-3.6c1.036-.49 2.018-1.2 2.727-2.073l3 2.51a11.049 11.049 0 0 1-4.09 3.163ZM9.673 31.62A5.121 5.121 0 0 1 14.8 26.49a5.121 5.121 0 0 1 5.128 5.128 5.121 5.121 0 0 1-5.128 5.127 5.122 5.122 0 0 1-5.127-5.127Zm4.909 11.727c-1.746-.054-3.437-.436-5.018-1.254l1.745-3.491c.982.49 2.128.818 3.328.818l-.055 3.927ZM7.218 29.819 3.4 28.89c.382-1.69 1.2-3.272 2.291-4.636l3.055 2.454a7.547 7.547 0 0 0-1.528 3.11Zm-1.69 9a10.9 10.9 0 0 1-2.182-4.691l3.818-.818c.272 1.145.763 2.236 1.472 3.109l-3.109 2.4Zm9.218-18.873h.436l-.164 3.927h-.272c-1.2 0-2.346.273-3.328.764l-1.69-3.546a11.457 11.457 0 0 1 5.018-1.145Zm5.454 1.309a12.175 12.175 0 0 1 3.927 3.327l-3.163 2.345a7.957 7.957 0 0 0-2.618-2.236l1.854-3.436Zm-5.454-3.382C7.164 17.873 1 24.037 1 31.618 1 39.2 7.164 45.364 14.746 45.364c7.581 0 13.745-6.164 13.745-13.746 0-7.581-6.164-13.745-13.745-13.745Z"
              fill="currentColor"
            />
          </g>
        </svg>
      </div>
      <h5
        className="c4 c5"
      >
        Spare parts
      </h5>
      <span
        className="c6"
      >
        Lorem ipsum dolor sit amet, con sectetadipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
      </span>
      <div
        className="c7"
      >
        <button
          className="c8"
          size="small"
        >
          More...
        </button>
      </div>
    </div>
    <div
      className="c9"
    >
      <div
        className="c10 c11"
      >
        <div
          style={
            Object {
              "backgroundImage": "url(\\"https://dummyimage.com/400x600/c0c0c0/fff\\")",
              "backgroundPosition": "center center",
              "backgroundSize": "cover",
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Cards/CardHorizontal With Image 1`] = `
.c8 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: bold;
  border: 0;
  border-radius: 20px;
  cursor: pointer;
  display: inline-block;
  line-height: 1;
  -webkit-transition: all 0.2s ease-out;
  transition: all 0.2s ease-out;
  text-transform: uppercase;
  line-height: 1;
  font-size: 14px;
  padding: 8px 26px;
  background-color: transparent;
  color: #6D6E70;
  border: 1px solid #6D6E70;
}

.c8:hover {
  background-color: #6D6E70;
  color: #FFF;
}

.c2 {
  color: #6D6E70;
}

.c2 > svg {
  height: 50px;
  color: inherit;
}

.c6 {
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 300;
  font-size: 16px;
  line-height: 24px;
  color: #252525;
}

.c4 {
  text-transform: uppercase;
  margin-top: 0;
  font-family: NB International Pro,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
  font-weight: 700;
  color: #6D6E70;
  font-size: 30px;
}

.c1 {
  padding: 45px 25px;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c5 {
  margin-bottom: 29px;
}

.c3 {
  margin-bottom: 36px;
}

.c7 {
  margin-top: 30px;
}

.c9 {
  -webkit-flex: 0 0 300px;
  -ms-flex: 0 0 300px;
  flex: 0 0 300px;
  overflow: hidden;
}

.c11 {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transition: -webkit-transform 0.5s ease-out;
  -webkit-transition: transform 0.5s ease-out;
  transition: transform 0.5s ease-out;
  width: 100%;
  height: 100%;
}

.c0 {
  width: 100%;
  border-top-right-radius: 40px;
  border-bottom-left-radius: 40px;
  overflow: hidden;
  background-color: #F5F5F5;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-transition: all 0.5s ease-out;
  transition: all 0.5s ease-out;
}

.c0:hover {
  background-color: #FFF;
  box-shadow: 0 0 20px 0 rgba(140,140,140,0.5);
}

.c0:hover .c10 {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

@media (max-width:768px) {
  .c9 {
    display: none;
  }
}

<div
  style={
    Object {
      "maxWidth": 600,
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <div
        className="c2 c3"
        color="#6D6E70"
      >
        <svg
          color="#6D6E70"
          viewBox="0 0 50 50"
          xmlns="http://www.w3.org/2000/svg"
          xmlnsXlink="http://www.w3.org/1999/xlink"
        >
          <defs>
            <path
              d="M0 0h22.528v46.582H0z"
              id="a"
            />
          </defs>
          <g
            fill="none"
            fillRule="evenodd"
          >
            <g
              transform="translate(26.472 2)"
            >
              <path
                d="m15.273 19.91-.49.217v24.818H7.69V20.182l-.436-.218C3.818 18.382 1.637 15 1.637 11.236c0-.436.054-.818.109-1.254l6.709 6.709c.436.436 1.09.709 1.746.709.654 0 1.254-.273 1.745-.71l5.018-5.017c.437-.437.71-1.091.71-1.746s-.273-1.255-.71-1.746L10.42 1.636c.273 0 .546-.055.818-.055 5.291 0 9.6 4.31 9.6 9.6a9.628 9.628 0 0 1-5.564 8.728ZM11.237 0c-.873 0-1.8.11-2.727.327L7.09.654l8.673 8.673c.164.164.218.382.218.6 0 .218-.11.437-.218.6l-5.018 5.018c-.327.328-.873.328-1.146 0L.818 6.764.436 8.073C.164 9.109 0 10.146 0 11.183c0 4.2 2.4 8.072 6.109 9.981v25.418h10.364V21.164c3.709-1.91 6.055-5.782 6.055-9.982C22.473 5.02 17.455 0 11.237 0Z"
                fill="currentColor"
              />
            </g>
            <path
              d="M26.473 31.619c0 .981-.109 1.963-.382 2.89l-3.818-.981c.164-.6.273-1.254.273-1.91 0-.49-.055-1.036-.164-1.527l3.873-.763c.109.763.218 1.527.218 2.29ZM19.6 42.255l-1.636-3.6c1.036-.49 2.018-1.2 2.727-2.073l3 2.51a11.049 11.049 0 0 1-4.09 3.163ZM9.673 31.62A5.121 5.121 0 0 1 14.8 26.49a5.121 5.121 0 0 1 5.128 5.128 5.121 5.121 0 0 1-5.128 5.127 5.122 5.122 0 0 1-5.127-5.127Zm4.909 11.727c-1.746-.054-3.437-.436-5.018-1.254l1.745-3.491c.982.49 2.128.818 3.328.818l-.055 3.927ZM7.218 29.819 3.4 28.89c.382-1.69 1.2-3.272 2.291-4.636l3.055 2.454a7.547 7.547 0 0 0-1.528 3.11Zm-1.69 9a10.9 10.9 0 0 1-2.182-4.691l3.818-.818c.272 1.145.763 2.236 1.472 3.109l-3.109 2.4Zm9.218-18.873h.436l-.164 3.927h-.272c-1.2 0-2.346.273-3.328.764l-1.69-3.546a11.457 11.457 0 0 1 5.018-1.145Zm5.454 1.309a12.175 12.175 0 0 1 3.927 3.327l-3.163 2.345a7.957 7.957 0 0 0-2.618-2.236l1.854-3.436Zm-5.454-3.382C7.164 17.873 1 24.037 1 31.618 1 39.2 7.164 45.364 14.746 45.364c7.581 0 13.745-6.164 13.745-13.746 0-7.581-6.164-13.745-13.745-13.745Z"
              fill="currentColor"
            />
          </g>
        </svg>
      </div>
      <h5
        className="c4 c5"
      >
        Spare parts
      </h5>
      <span
        className="c6"
      >
        Lorem ipsum dolor sit amet, con sectetadipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
      </span>
      <div
        className="c7"
      >
        <button
          className="c8"
          size="small"
        >
          More...
        </button>
      </div>
    </div>
    <div
      className="c9"
    >
      <div
        className="c10 c11"
      >
        <div
          style={
            Object {
              "backgroundImage": "url(\\"https://dummyimage.com/400x600/c0c0c0/fff\\")",
              "backgroundPosition": "center center",
              "backgroundSize": "cover",
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;
